; ModuleID = '/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_filter_item_name.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_filter_item_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @filter_item_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @filter_item_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strdup(i8* %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @r_str_trim(i8* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @r_name_filter(i8* %13, i32 0)
  %15 = load i8*, i8** %4, align 8
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @r_str_trim(i8*) #1

declare dso_local i32 @r_name_filter(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
